# quimibond-capital

./: .env  .env.example  .gitignore  CLAUDE.md  EXPORT (1).xlsx  README.md  pyproject.toml  requirements.txt
config/: classifiers.yaml  families.yaml  pe_playbook.yaml  thresholds.yaml
docs/: DENUE_API.md  NAICS_reference.md  workflow.md
scripts/: build_emis_fixture.py  recalc.py
src/: __init__.py  cleaning.py  config.py  denue_client.py  denue_pipeline.py  enrichment.py  workbook_writer.py
src/quimibond/: __init__.py  cli.py  config_loader.py  logging_setup.py  models.py
src/quimibond/enrichment/: __init__.py  clients.py  normalizers.py  processes.py  shareholders.py  subsector.py
src/quimibond/ingestion/: __init__.py  base.py  emis.py  emis_parsers.py
src/quimibond/output/: __init__.py  helpers.py  styles.py  workbook.py
src/quimibond/output/sheets/: base.py  fuentes.py  inicio.py  investment_memo.py  multiple_arbitrage.py  owner_fatigue.py  pipeline_pe.py  rubrica_pe.py  saturation_check.py  tres_palancas.py  universo_raw.py  vista_familiar.py
src/quimibond/pe_classification/: __init__.py  arbitrage.py  fatigue.py  levers.py  role.py  saturation.py
src/quimibond/traceability/: __init__.py  lineage.py
src/quimibond/validation/: __init__.py  invariants.py
tests/: conftest.py
tests/fixtures/: emis_sample_50.xlsx
tests/integration/: test_emis_loader.py  test_enrichment.py  test_pipeline_e2e.py  test_workbook.py
tests/unit/: test_arbitrage.py  test_clients.py  test_config_loader.py  test_emis_parsers.py  test_fatigue.py  test_invariants.py  test_levers.py  test_lineage.py  test_models.py  test_normalizers.py  test_processes.py  test_role.py  test_saturation.py  test_shareholders.py  test_subsector.py
